Arrows in Side navigation bar fixed

--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_Layout.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_Layout.cshtml
@@ -39,13 +39,17 @@
 						<div class="menu-list">
 						<ul class="menu-content collapse out" id="menu-content">
 							<li class="collapsed" aria-expanded="false" data-target="#account" data-toggle="collapse">
-								<a href="javascript: void(0);"> Account Settings <span class="arrow"></span></a>
+								<a href="javascript: void(0);"> Account Settings <i class="material-icons arrow">
+	keyboard_arrow_down
+</i></a>
 							</li>
 							<ul class="sub-menu collapse" id="account">
 								<li><a class="Password" data-toggle="modal" data-target="#changePassword"><img alt="" src="~/Content/img/change-password.png"> Change Password</a></li>
 							</ul>
 							<li class="collapsed" aria-expanded="false" data-target="#contact" data-toggle="collapse">
-								<a href="javascript: void(0);"> Update Contact Info <span class="arrow"></span></a>
+								<a href="javascript: void(0);"> Update Contact Info <i class="material-icons arrow">
+	keyboard_arrow_down
+</i></a>
 							</li>
 							<ul class="sub-menu collapse" id="contact">
 								<li><a class="Phone"><img alt="" src="~/Content/img/phone.png"> Phone</a></li>
@@ -62,14 +66,18 @@
 						<div class="menu-list">
 						<ul class="menu-content collapse out" id="menu-content">
 							<li class="collapsed" aria-expanded="false" data-target="#account" data-toggle="collapse">
-								<a href="javascript: void(0);"> Account Settings <span class="arrow"></span></a>
+								<a href="javascript: void(0);"> Account Settings <i class="material-icons arrow">
+	keyboard_arrow_down
+</i></a>
 							</li>
 						<ul class="sub-menu collapse" id="account">
 							<li><a class="Password" data-toggle="modal" data-target="#changePassword"><label><img alt="" src="~/Content/img/change-password.png"> Change Password</label></a></li>
 							<li class="active"><a href="javascript: void(0);"><label><img alt="" src="~/Content/img/update-family-info-active.png"> Update Family Info</label></a></li>
 						</ul>
 						<li class="collapsed" aria-expanded="false" data-target="#contact" data-toggle="collapse">
-							<a href="javascript: void(0);"> Update Contact Info <span class="arrow"></span></a>
+							<a href="javascript: void(0);"> Update Contact Info <i class="material-icons arrow">
+	keyboard_arrow_down
+</i></a>
 						</li>
 						<ul class="sub-menu collapse" id="contact">
 							<li><a class="Phone"><label><img alt="" src="~/Content/img/phone.png"> Phone</label></a></li>
@@ -77,7 +85,9 @@
 							<li><a class="Address"><label><img alt="" src="~/Content/img/address.png"> Address</label></a></li>
 						</ul>
 						<li class="collapsed" aria-expanded="false" data-target="#payment" data-toggle="collapse">
-							<a href="javascript: void(0);"> Payment Details <span class="arrow"></span></a>
+							<a href="javascript: void(0);"> Payment Details <i class="material-icons arrow">
+	keyboard_arrow_down
+</i></a>
 						</li>
 						<ul class="sub-menu collapse" id="payment">
 							<li><a href="javascript: void(0);"><label><img alt="" src="~/Content/img/past-transations.png"> Past Transactions</label></a></li>
