--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Content/custom-styles.css
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Content/custom-styles.css
@@ -404,16 +404,7 @@ iframe {width:100% !important;}
   line-height: 45px;
   cursor: pointer;
 }
-.nav-side-menu ul :not(collapsed) .arrow:before,
-.nav-side-menu li :not(collapsed) .arrow:before {
-  font-family: FontAwesome;
-  content: "\f078";
-  display: inline-block;
-  padding-left: 10px;
-  padding-right: 10px;
-  vertical-align: middle;
-  float: right;
-}
+
 .nav-side-menu ul .active,
 .nav-side-menu li .active {
   color:#F00;
@@ -458,11 +449,7 @@ iframe {width:100% !important;}
   font-size:14px;
   font-weight:500;
 }
-.nav-side-menu li a i {
-  padding: 0px 0px;
-  width: 20px;
-  padding-right: 20px;
-}
+
 .nav-side-menu li:hover {
   -webkit-transition: all 1s ease;
   -moz-transition: all 1s ease;
@@ -473,9 +460,15 @@ iframe {width:100% !important;}
 .nav-side-menu ul .sub-menu li a img {
 	margin-right:10px;
 }
-.nav-side-menu li a .arrow {
-	font-size:8px;
-}
+	.nav-side-menu li a .arrow {
+		margin-top: 11px;
+		font-size: 24px;
+		float: right;
+		padding: 0px 0px;
+		width: 20px;
+		padding-right: 20px;
+	} 
+
 @media (max-width: 767px) {
 .nav-side-menu {
 	float:none;
