--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_LayoutForProgramEventRegistration.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_LayoutForProgramEventRegistration.cshtml
@@ -31,7 +31,7 @@
 		@Session["Menu"]
 	</header>
 	<div class="theme_bg">
-		<div class="nav-side-menu">
+		<div class="nav-side-menu" style="position: absolute">
 			<div class="menu-list">
 				<ul class="menu-content collapse out classes-list" id="menu-content">
 					<li><a target="_blank" rel="noopener noreferrer" href="http://mychinmaya.org/balavihar/"> About Balavihar Classes </a></li>
