--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Admin/Index.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Admin/Index.cshtml
@@ -5,6 +5,12 @@
     ViewBag.Title = "MyAccount-Admin";
 }
 <style>
+	.requiredA:after {
+		content: " *";
+		font-weight: bold;
+		color: red;
+	}
+
     td.details-control {
         background: url('../Content/img/details_open.png') no-repeat center center;
         cursor: pointer;
@@ -23,9 +29,10 @@
 <div class="bd-content">
 	<div class="row">
 		<div class="col-md-10"><h3>User Information</h3></div>
-		<a href="javascript: void(0);" data-toggle="tooltip" title="Converts Individual Account to Family Account"><button class="btn btn-orange float-right mr-3" type="submit" onclick="changeAccount()">Submit <i class="material-icons">check_circle</i></button></a>
-		
+		<div class="col-md-2 text-right"><a href="javascript: void(0);" data-toggle="tooltip" title="Converts Individual Account to Family Account"><button class="btn btn-orange" type="submit" onclick="changeAccount()">Submit <i class="material-icons">check_circle</i></button></a></div>
 	</div>
+
+	<div class="row">
 		<div class="col-md-12 table-responsive">
 			<table id="example" class="display">
 				<thead>
@@ -42,16 +49,16 @@
 				</thead>
 			</table>
 		</div>
-
 	</div>
+</div>
 
-    <script>
+	<script>
 		function changeAccount() {
 			var selected = [];
 			$("input:checkbox[class=editor-active]:checked").each(function () {
 				selected.push($(this).attr('id'));
 			});
-			
+
 			if (selected.length == 0) {
 				var content = "Please select atleast one Individual Account";
 				$.confirm({
@@ -71,14 +78,14 @@
 			else {
 				var content = "Would you like to change Account to Family Account? ";
 				$.confirm({
-                    title: 'confirm!',
-                    content: content,
-                    buttons: {
-                        confirm: {
-                            text: 'Okay',
-                            btnClass: 'btn-blue',
-                            keys: ['enter', 'shift'],
-                            action: function () {
+					title: 'confirm!',
+					content: content,
+					buttons: {
+						confirm: {
+							text: 'Okay',
+							btnClass: 'btn-blue',
+							keys: ['enter', 'shift'],
+							action: function () {
 								$("input:checkbox[class=editor-active]:checked").each(function () {
 									var id = $(this).attr("Id");
 									$.ajax({
@@ -104,57 +111,57 @@
 										}
 									}
 								});
-								
+
 							}
-                        },
-                        cancel: function () {
-                            $('.editor-active').prop('checked', false);
-                        }
-                    }
+						},
+						cancel: function () {
+							$('.editor-active').prop('checked', false);
+						}
+					}
 				});
-				
+
 			}
 		}
 
 		$(document).ready(function () {
 			$('[data-toggle="tooltip"]').tooltip();
-            function format(Id, tr, row) {
-                $.ajax({
-                    "type": "GET",
-                    url: "../Admin/GetAllFamilyMembers/" + Id,
-                    "datatype": "json",
-                    success: function (res) {
-                        if (res.data.length > 0) {
-                            var dynamicHtml = '<table id="Child" cellpadding="5" cellspacing="0" border="0" style="padding-left:50px;">'
+			function format(Id, tr, row) {
+				$.ajax({
+					"type": "GET",
+					url: "../Admin/GetAllFamilyMembers/" + Id,
+					"datatype": "json",
+					success: function (res) {
+						if (res.data.length > 0) {
+							var dynamicHtml = '<table id="Child" cellpadding="5" cellspacing="0" border="0" style="padding-left:50px;">'
 								+ '<thead><tr><th style="border:0 none;"></th><th style="border:0 none;"></th><th style="border:0 none;"></th><th>FullName</th><th>DOB</th><th>Relationship</th><th>Grade</th></tr></thead><tbody>';
-                            $.each(res.data, function (i, data) {
+							$.each(res.data, function (i, data) {
 								dynamicHtml += '<tr>' +
 									'<td style="border:0 none;">' + '' + '</td>' +
 									'<td style="border:0 none;">' + '' + '</td>' +
 									'<td style="border:0 none;">' + '' + '</td>' +
-                                    '<td>' + data.Fullname + '</td>' +
-                                    '<td>' + data.DOB + '</td>' +
-                                    '<td>' + data.Relationship + '</td>' +
-                                    '<td>' + data.Grade + '</td>' +
-                                    '</tr>';
-                            });
-                        }
-                        else {
+									'<td>' + data.Fullname + '</td>' +
+									'<td>' + data.DOB + '</td>' +
+									'<td>' + data.Relationship + '</td>' +
+									'<td>' + data.Grade + '</td>' +
+									'</tr>';
+							});
+						}
+						else {
 							dynamicHtml = "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Family members does not exist</b>";
-                        }
-                        row.child(dynamicHtml).show();
-                        tr.addClass('shown');
-                    }
-                });
-            }
+						}
+						row.child(dynamicHtml).show();
+						tr.addClass('shown');
+					}
+				});
+			}
 
-            var table = $('#example').DataTable({
-                "order": [],
-                ajax: {
-                    "url": "../Admin/GetAllUsers",
-                    "type": "GET",
-                    "datatype": "json"
-                },
+			var table = $('#example').DataTable({
+				"order": [],
+				ajax: {
+					"url": "../Admin/GetAllUsers",
+					"type": "GET",
+					"datatype": "json"
+				},
 				columnDefs: [
 					{
 						"targets": 0,
@@ -175,57 +182,57 @@
 						"data": null,
 						"defaultContent": '',
 						"width": "0.1%"
-						
+
 					},
-                    {
-                        "targets": 2,
-                        "data": "Id",
-                        "visible": false
-                    },
-                    {
-                        "targets": 3,
-                        "data": "FullName",
-                        "width": "20%"
-                    },
-                    {
-                        "targets": 4,
-                        "data": "AccountType",
-                        "width": "20%"
-                    },
-                    {
-                        "targets": 5,
-                        "data": "DOB"
-                    },
-                    {
-                        "targets": 6,
-                        "data": "HomePhone",
-                        "width": "8%"
-                    },
-                    {
-                        "targets": 7,
-                        "data": "CellPhone",
-                        "width": "15%"
-                    }
-                ]
+					{
+						"targets": 2,
+						"data": "Id",
+						"visible": false
+					},
+					{
+						"targets": 3,
+						"data": "FullName",
+						"width": "20%"
+					},
+					{
+						"targets": 4,
+						"data": "AccountType",
+						"width": "20%"
+					},
+					{
+						"targets": 5,
+						"data": "DOB"
+					},
+					{
+						"targets": 6,
+						"data": "HomePhone",
+						"width": "8%"
+					},
+					{
+						"targets": 7,
+						"data": "CellPhone",
+						"width": "15%"
+					}
+				]
 			});
-						
-            $('#example tbody').on('click', 'td.details-control', function () {
 
-                var tr = $(this).closest('tr');
-                var $tds = tr.find("td");
+			$('#example tbody').on('click', 'td.details-control', function () {
 
-                $tds = $(this).closest("tr").find("input:hidden");
-                var arr = $('#example').dataTable().fnGetData($(this));
-                var Id = arr.Id;
-                var row = table.row(tr);
+				var tr = $(this).closest('tr');
+				var $tds = tr.find("td");
 
-                if (row.child.isShown()) {
-                    row.child.hide();
-                    tr.removeClass('shown');
-                }
-                else {
-                    format(Id, tr, row);
-                }
-            });
-        });
-    </script>
+				$tds = $(this).closest("tr").find("input:hidden");
+				var arr = $('#example').dataTable().fnGetData($(this));
+				var Id = arr.Id;
+				var row = table.row(tr);
+
+				if (row.child.isShown()) {
+					row.child.hide();
+					tr.removeClass('shown');
+				}
+				else {
+					format(Id, tr, row);
+				}
+			});
+		});
+	</script>
