--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_LayoutForProgramEventRegistration.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_LayoutForProgramEventRegistration.cshtml
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
 <body class="theme_bg">
-	<header>
+	<header class="fixed-top">
 		<div class="header_top">
 			<a class="navbar-brand" href="javascript: void(0);"><img alt="mainlogo" src="~/Content/img/dashboard-logo.png"></a>
 			<div class="header-right">
@@ -17,7 +17,7 @@
 				<select class="drpdown">
 					<option>Our Other Sites</option>
 				</select>
-				<a class="fab fa-facebook-f" href="javascript: void(0);"></a>
+				<a target="_blank" rel="noopener noreferrer" class="fab fa-facebook-f" href="https://www.facebook.com/Chinmayamissionchicago/"></a>
 				<a class="fab fa-twitter" href="javascript: void(0);"></a>
 				<a class="fab fa-google-plus-g" href="javascript: void(0);"></a>
 				<a class="fab fa-linkedin-in" href="javascript: void(0);"></a>
@@ -30,8 +30,8 @@
 		}
 		@Session["Menu"]
 	</header>
-	<div class="theme_bg">
-		<div class="nav-side-menu" style="position: absolute">
+	<div class="theme_bg page-body-wrapper">
+		<div class="nav-side-menu">
 			<div class="menu-list">
 				<ul class="menu-content collapse out classes-list" id="menu-content">
 					<li><a target="_blank" rel="noopener noreferrer" href="http://mychinmaya.org/balavihar/"> About Balavihar Classes </a></li>
@@ -43,10 +43,10 @@
 
 		@RenderBody()
 		<hr />
-		<footer>
-			<p>&copy; @DateTime.Now.Year - Chinmaya Mission</p>
-		</footer>
 	</div>
+	<footer>
+		<p>&copy; @DateTime.Now.Year - Chinmaya Mission</p>
+	</footer>
 	@Scripts.Render("~/bundles/bootstrap")
 	@Scripts.Render("~/bundles/jqueryval")
 	@RenderSection("scripts", required: false)
