Design issues fixed

--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/ContactDetails.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/ContactDetails.cshtml
@@ -152,7 +152,7 @@
 					</div>
 					<div class="row">
 						<div class="col-md-12">
-							<button class="btn btn-secondary float-left" name="prevBtn" type="submit">Back <i class="material-icons">cancel</i></button>
+							<button class="btn btn-secondary float-left" name="prevBtn" type="submit">Back @*<i class="material-icons">cancel</i>*@<i class="fas fa-arrow-alt-circle-left"></i></button>
 							<button class="btn btn-orange float-right contactDetails" name="nextBtn" type="submit" data-target="#demo" data-toggle="collapse">Continue <i class="material-icons">check_circle</i></button>
 						</div>
 					</div>
