--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_LayoutForProgramEventRegistration.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_LayoutForProgramEventRegistration.cshtml
@@ -34,9 +34,9 @@
 		<div class="nav-side-menu">
 			<div class="menu-list">
 				<ul class="menu-content collapse out classes-list" id="menu-content">
-					<li><a target="_blank" rel="noopener noreferrer" href="http://mychinmaya.org/balavihar/"> About Balavihar Classes </a></li>
-					<li><a href="javascript: void(0);"> Link 2 </a></li>
-					<li><a href="javascript: void(0);"> Link 3 </a></li>
+					<li><a target="_blank" rel="noopener noreferrer" href="http://mychinmaya.org/balavihar/"> <i class="material-icons arrow">keyboard_arrow_right</i>About Balavihar Classes </a></li>
+					<li><a href="javascript: void(0);"> <i class="material-icons arrow">keyboard_arrow_right</i>Link 2 </a></li>
+					<li><a href="javascript: void(0);"> <i class="material-icons arrow">keyboard_arrow_right</i>Link 3 </a></li>
 				</ul>
 			</div>
 		</div>
