--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_LayoutPageRegister.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_LayoutPageRegister.cshtml
@@ -2,14 +2,14 @@
 
 <html>
 <head>
-    <meta name="viewport" content="width=device-width" />
-    <title>@ViewBag.Title</title>
+	<meta name="viewport" content="width=device-width" />
+	<title>@ViewBag.Title</title>
 
-    @Styles.Render("~/Content/css")
-    @RenderSection("Styles", false)
+	@Styles.Render("~/Content/css")
+	@RenderSection("Styles", false)
 
-    @Scripts.Render("~/bundles/jquery")
-
+	@Scripts.Render("~/bundles/jquery")
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
 <body class="theme_bg">
     <header class="regi-header">
