--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Content/custom-styles.css
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Content/custom-styles.css
@@ -71,7 +71,7 @@ body {font-family: 'Roboto', sans-serif; color:#666; font-size:13px;}
 a {color:#f8430c;}
 
 a:hover {color:#f8430c; text-decoration:none;}
-
+	
 .btn {font-size:14px;}
 
 .btn:focus, .btn:active:focus, .btn.active:focus {outline: 0 none;}
@@ -200,18 +200,25 @@ label {font-weight:400; font-size:14px; margin-bottom:7px; margin-top:3px; width
 	box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.12);
 }
 
-.bd-content {
-	transition: width 0.25s ease, margin 0.25s ease;
-	width: calc(100% - 300px);
-	min-height: calc(100vh - 56px);
-	display: -webkit-flex;
-	display: flex;
-	-webkit-flex-direction: column;
-	flex-direction: column;
-	padding: 0px 30px 30px 30px;
-	background-color: #f3f1fb;
-	padding: 55px 62px;
-}
+	.nav-side-menu .classes-list li a .arrow {
+		float:left; margin-right:5px;
+		padding-top:2px;
+		font-size:18px;
+		color:#999;
+	}
+
+	.bd-content {
+		transition: width 0.25s ease, margin 0.25s ease;
+		width: calc(100% - 300px);
+		min-height: calc(100vh - 56px);
+		display: -webkit-flex;
+		display: flex;
+		-webkit-flex-direction: column;
+		flex-direction: column;
+		padding: 0px 30px 30px 30px;
+		background-color: #f3f1fb;
+		padding: 55px 62px;
+	}
 
 .search-field {
     width: 150px;
@@ -253,11 +260,15 @@ label {font-weight:400; font-size:14px; margin-bottom:7px; margin-top:3px; width
 	color:#fff;
 }
 
-.fab, .fas {
-  padding: 10px;
+.fab, .fas, .far {
+  padding: 0px;
   text-align: center;
   text-decoration: none;
-  margin: 2px 2px;
+  margin: 0px 2px;
+}
+
+.line-height14 {
+	line-height: 24px !important;
 }
 
 .fab:hover {
@@ -458,7 +469,7 @@ iframe {width:100% !important;}
 .nav-side-menu ul .sub-menu li a,
 .nav-side-menu li .sub-menu li a {
   color: #666;
-  font-size:13px;
+  font-size:14px;
 }
 .nav-side-menu ul .sub-menu li.active a,
 .nav-side-menu li .sub-menu li.active a {
@@ -479,7 +490,7 @@ iframe {width:100% !important;}
 }
 .nav-side-menu ul.classes-list li:before {
   font-family: FontAwesome;
-  content: "\f105";
+  /*content: "\f105";*/
   display: inline-block;
   padding-left: 10px;
   padding-right: 10px;
