--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_Layout.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_Layout.cshtml
@@ -5,8 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>@ViewBag.Title - Chinmaya Mission</title>
 	@Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/jquery")
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+	@Scripts.Render("~/bundles/jquery")
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
 <body class="theme_bg">
 	<header class="fixed-top">
@@ -39,21 +39,13 @@
 				<div class="menu-list">
 					<ul class="menu-content collapse out" id="menu-content">
 						<li class="collapsed" aria-expanded="false" data-target="#account" data-toggle="collapse">
-							<a href="javascript: void(0);">
-								Account Settings <i class="material-icons arrow">
-									keyboard_arrow_down
-								</i>
-							</a>
+							<a href="javascript: void(0);">Account Settings <i class="material-icons arrow">keyboard_arrow_down</i></a>
 						</li>
 						<ul class="sub-menu collapse" id="account">
 							<li><a class="Password" data-toggle="modal" data-target="#changePassword"><img alt="" src="~/Content/img/change-password.png"> Change Password</a></li>
 						</ul>
 						<li class="collapsed" aria-expanded="false" data-target="#contact" data-toggle="collapse">
-							<a href="javascript: void(0);">
-								Update Contact Info <i class="material-icons arrow">
-									keyboard_arrow_down
-								</i>
-							</a>
+							<a href="javascript: void(0);">Update Contact Info <i class="material-icons arrow">keyboard_arrow_down</i></a>
 						</li>
 						<ul class="sub-menu collapse" id="contact">
 							<li><a class="Phone"><img alt="" src="~/Content/img/phone.png"> Phone</a></li>
