Datetimepicker arrows issue fixed

--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Event/Event.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Event/Event.cshtml
@@ -17,7 +17,7 @@
 		color: red;
 	}
 	.nav-link-active {
-		color: #f8430c;
+		color: #f8430c !important;
 	}
 </style>
 
@@ -151,7 +151,7 @@
 </script>
 
 <script>
-	$("#current-Events").click(function () {
-			$(this).removeClass("nav-link").addClass('nav-link-active');
-	});
+	//$("#current-Events").click(function () {
+			//$(this).removeClass("nav-link").addClass('nav-link-active');
+	//});
 </script>
