--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Content/custom-styles.css
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Content/custom-styles.css
@@ -39,8 +39,9 @@ body {font-family: 'Roboto', sans-serif; color:#666; font-size:13px;}
   src: url(fonts/MaterialIcons-Regular.eot); /* For IE6-8 */
   src: local('Material Icons'),
        local('MaterialIcons-Regular'),
-       url(fonts/MaterialIcons-Regular.woff) format('woff'),
-       url(fonts/MaterialIcons-Regular.ttf) format('truetype');
+       url(fonts/materialicons.woff2) format('woff2'),
+       url(fonts/MaterialIcons-Regular.ttf) format('truetype'),
+	   url(fonts/MaterialIcons-Regular.woff) format('woff');
 }
 
 .material-icons {
