--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Event/_AddEvent.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Event/_AddEvent.cshtml
@@ -1,5 +1,17 @@
 ﻿@model Chinmaya.Registration.Models.EventsModel
-
+<style>
+.fa {
+	color:gray;
+}
+	.fas {
+		padding-top:10px;
+		padding-left:4px;
+	}
+.input-group-addon {
+	background-color:lightgray;
+	width: 25px;
+}
+</style>
 <div class="modal-dialog modal-dialog-centered modal-lg">
 	<div class="modal-content">
 		<div class="modal-body">
@@ -72,7 +84,7 @@
 						@Html.LabelFor(m => m.StartDate)
 						<div class="input-group">
 							@Html.TextBoxFor(m => m.StartDate, "{0:d}", new { @class = "datepicker form-control", @type = "text", @Name = "StartDate", @value = "", @style = "height: 35px;" })
-							<div class="input-group-addon"><span class="glyphicon glyphicon-th"></span></div>
+							<span class="input-group-addon"><i class="fas fa-calendar-alt"></i></span>
 						</div>
 						@Html.ValidationMessageFor(m => m.StartDate, "", new { @class = "text-danger" })
 					</div>
@@ -80,7 +92,7 @@
 						@Html.LabelFor(m => m.EndDate)
 						<div class="input-group">
 							@Html.TextBoxFor(m => m.EndDate, "{0:d}", new { @class = "datepicker form-control", @type = "text", @Name = "EndDate", @value = "", @style = "height: 35px;" })
-							<div class="input-group-addon"><span class="glyphicon glyphicon-th"></span></div>
+							<span class="input-group-addon"><i class="fas fa-calendar-alt"></i></span>
 						</div>
 						@Html.ValidationMessageFor(m => m.EndDate, "", new { @class = "text-danger" })
 					</div>
@@ -92,7 +104,7 @@
 						<div class='input-group mb-0'>
 							@Html.TextBoxFor(m => m.StartTime, new { @class = "form-control", @type = "text", @Name = "StartTime", @style = "height: 35px;" })
 							<span class="input-group-addon">
-								<span class="glyphicon glyphicon-time"></span>
+								<i class="fas fa-clock"></i>
 							</span>
 						</div>
 						@Html.ValidationMessageFor(m => m.StartTime, "", new { @class = "text-danger" })
@@ -102,7 +114,7 @@
 						<div class='input-group mb-0'>
 							@Html.TextBoxFor(m => m.EndTime, new { @class = "form-control", @type = "text", @Name = "EndTime", @style = "height: 35px;" })
 							<span class="input-group-addon">
-								<span class="glyphicon glyphicon-time"></span>
+								<i class="fas fa-clock"></i>
 							</span>
 						</div>
 						@Html.ValidationMessageFor(m => m.EndTime, "", new { @class = "text-danger" })
@@ -142,7 +154,7 @@
 						@Html.LabelFor(m => m.HolidayDate, new { @class = "requiredA" })
 						<div class="input-group date mb-0">
 							@Html.TextBoxFor(m => m.HolidayDate, "{0:d}", new { @class = "datepicker form-control", @type = "text", @Name = "HolidayDate", @value = "", @style = "height: 35px;" })
-							<div class="input-group-addon"><span class="glyphicon glyphicon-th"></span></div>
+							<span class="input-group-addon"><i class="fas fa-calendar-alt"></i></span>
 						</div>
 						<label class="text-danger" id="Err_HolidayDate">The HolidayDate field is required</label>
 					</div>
@@ -180,9 +192,16 @@
 			dateFormat: 'mm/dd/yyyy',
 			startDate: '-100y'
 		});
+		//$('.fa-calendar-alt').click(function () {
+		//	$(this).datepicker();
+		//});		
 
 		$("#StartTime, #EndTime").datetimepicker({
-			format: 'HH:mm'
+			format: 'HH:mm',
+			icons: {
+				up: "fa fa-chevron-circle-up",
+				down: "fa fa-chevron-circle-down",
+			}
 		});
 		
 	});
